--- a/style.css
+++ b/style.css
@@ -170,7 +170,8 @@ width: 1600px;
   }
         /*pallax effect*/
    body {
-              background-image: url(../images/background.jpg);
+              background-image: url(images/background.jpg);
+
               height:100%;
               background-repeat:no-repeat;
               background-attachment:fixed;
