--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgb(255, 221, 0);
   padding: 20px 0px 25px 0px;
+  left-margin: 50px;
 }
 
 
