--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
   scroll-behavior: smooth;
 }
 
-
+/* main logo */
 #logo{
   border-style: none;
   border-radius: 0px;
@@ -19,8 +19,9 @@ html{
 
 *{
   box-sizing: border-box;
-}
+} 
 
+/* Navigation bar links */
 
 .nav-link{
   padding-left: 60px;
@@ -38,37 +39,50 @@ html{
 
 
 
-.img{
+/* .img{
   position:left;
   padding: 10px;
   width: 300px;
-}
+} */
 
-p {
+
+/* Footer Copyright text*/
+p{
   font-family: 'Comfortaa', cursive;
-  font-size: 16px;
+  font-size: 10px;
 }
 
+/* All H1 headings without ID tags */
 h1 {
   font-family: 'Press Start 2P', cursive;
   color:rgb(255, 255, 255);
   text-align: center;
   padding: 5px;
   font-weight: normal;
-  font-size: 45px;
+  font-size: 40px;
+  font-style: italic;
   background-color: hsla(0, 0%, 0%, 0.411);
 }
 
-h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: rgb(255, 221, 0);
-  padding: 100px;
-  Margin: 200px;
+/* My Portfolio page*/
+#graphic-designs{
+  font-family: 'Nabla', cursive;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 60px;
+  padding: 5px;
+  background-color: hsla(0, 0%, 0%, 0.411);
+
+}
+
+/* All H2 headings without ID tags */
+h2{
+  
 }
 
 
-
-h3 {
+/* All H3 headings without ID tags */
+h3{
   font-family: 'Comfortaa', cursive;
   text-align:center;
   color: #ffffff;
@@ -76,21 +90,34 @@ h3 {
   padding-left: 200px; 
 }
 
+/* All H4 Body Text without ID tags */
 h4{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-align: left;
-  font-style: normal;
+  font-family: 'Comfortaa', cursive;
+  text-align:center;
   color: #ffffff;
-  size: 10px;;
+  padding-right:200px;
+  padding-left: 200px; 
+
+}
+
+h5{
+
+}
+
+
+h6{
+
+
 }
 
 #title{
   font-family: 'Nabla', cursive;
+  font-style: normal;
   color: rgb(255, 255, 255);
   text-align: center;
-  font-size: 80px;
+  font-size: 60px;
   padding: 5px;
-  /*background-color: #004b84;*/
+  background-color: hsla(0, 0%, 0%, 0.411);
   
 }
 
@@ -232,9 +259,9 @@ width: 1600px;
   background-color: #ffd900;
   border: none;
   color: #000;
-  padding: 5px 5px;
+  padding: 3px 3px;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 11px;
 }
 
 /* Media Queries */
@@ -316,6 +343,7 @@ button {
   /*background-color: rgba(0, 200, 255, 0.418);*/
 }
 
+/*
 .plane {
   align: center;
   scale: 50%;
@@ -328,7 +356,9 @@ button {
   border-top-left-radius: 0%;
   border-bottom-left-radius: 200px;
 
-}
+} 
+
+*/
 
 /*
 #plane_button{
