--- a/style.css
+++ b/style.css
@@ -9,33 +9,37 @@ html{
   border-style: none;
   border-radius: 0px;
   align-items: center;
-  width: 10% ;
+  width:175px ;
   display: block;
   margin:0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-
-*{
-  box-sizing: border-box;
-} 
-
 /* Navigation bar links */
 
 .nav-link{
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-inline: 10px;
+  margin
   align-items: center;
-  font-weight:bolder;
+  font-weight:bold;
   color: #ffffff;
   font-style:normal;
   /*background-color: #ecd500;*/
-  border-radius: 0px;
+  border-radius: 25px;
   text-decoration: none;
 }
+
+.nav-link:hover{
+  background-color: rgba(0, 168, 214, 0.474);
+}
+
 
 
 
@@ -56,12 +60,65 @@ p{
 h1 {
   font-family: 'Press Start 2P', cursive;
   color:rgb(255, 255, 255);
-  text-align: center;
-  padding: 5px;
+  text-align: left;
+  text-overflow: clip;
+  padding-left: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   font-weight: normal;
   font-size: 40px;
   font-style: italic;
   background-color: hsla(0, 0%, 0%, 0.411);
+  background
+
+}
+
+/*Welcome! heading*/
+#Welcome{
+  font-family: 'Press Start 2P', cursive;
+  color:rgb(255, 255, 255);
+  text-align: center;
+  font-weight: normal;
+  border: #ffd900;
+  font-size: 250%;
+  font-style: italic;
+  background-color: hsla(42, 100%, 50%, 0.933);
+  /*border-radius: 50px 50px; */
+  padding-top: 10px;
+  padding-bottom: 10px;
+  
+}
+
+/*Artist Profile*/
+#Artist_profile{
+  font-family: 'Press Start 2P', cursive;
+  color: #ffffff;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-weight: normal;
+  font-size: 40px;
+  font-style: italic;
+  background-color: hsla(0, 0%, 0%, 0.501);
+  background-size:40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+
+#Contact{
+  font-family: 'Press Start 2P', cursive;
+  color:rgb(255, 255, 255);
+  text-align: center;
+  padding-left: 50px;
+  font-weight: normal;
+  font-size: 40px;
+  font-style: italic;
+  background-color: hsla(42, 100%, 27%, 0.411);
+  border-radius: 50px;
+  margin-left:20%;
+  margin-right: 20% ; 
 }
 
 /* My Portfolio page*/
@@ -72,14 +129,15 @@ h1 {
   font-size: 60px;
   padding: 5px;
   background-color: hsla(0, 0%, 0%, 0.411);
-
 }
 
-/* All H2 headings without ID tags */
+/*
+All H2 headings without ID tags 
+
 h2{
   
 }
-
+*/
 
 /* All H3 headings without ID tags */
 h3{
@@ -95,30 +153,34 @@ h4{
   font-family: 'Comfortaa', cursive;
   text-align:center;
   color: #ffffff;
-  padding-right:200px;
-  padding-left: 200px; 
-
+  /*padding-right:200px;
+  padding-left: 200px; */
+  margin-left:20%;
+  margin-right: 20% ;
 }
 
+/*
 h5{
 
 }
+*/
 
-
+/*
 h6{
 
-
 }
+*/  
 
+/*Gavelle papel Litchmore*/
 #title{
   font-family: 'Nabla', cursive;
   font-style: normal;
   color: rgb(255, 255, 255);
+  text-decoration-skip: 0;
   text-align: center;
   font-size: 60px;
   padding: 5px;
-  background-color: hsla(0, 0%, 0%, 0.411);
-  
+  background-color: hsla(0, 0%, 0%, 0.411); 
 }
 
 #div{
@@ -127,24 +189,20 @@ h6{
   width: 900px;
  /* border-radius: 30px;
   outline: #ffd900;*/
-  
-
 }
  
 .container{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 color: #044a5e;
-
-
 }
 
 /* Style navigation bar */
-
 .wrapper {
   font-family: 'Press Start 2P', cursive;  margin-left:auto;
   margin-right:auto;
   max-width: 1620px;
   text-align: center;
+  flex-flow: row;
   
   
   }
@@ -191,9 +249,12 @@ width: 1600px;
   #vector_gav {
     /* margin-left: 100px;
     margin-right:100px; */
-    border-radius: 50%;
+    /*border-radius: 20%;*/
     background-position: center;
-    width: 20%; 
+    border-color:#ffd900(14, 190, 146);
+    border-style: groove;
+    border-width: 10px;
+    width: 300px; 
     
   }
         /*pallax effect*/
@@ -206,31 +267,6 @@ width: 1600px;
               background-size:cover;    
             }
   
-    /*scroll to top button*/
-
-    body {
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      font-size: 20px;
-    }
-    
-    #myBtn {
-      float:right;
-      position: fixed;
-      bottom: 20px;
-      right: 6px;
-      z-index: 10;
-      font-size: 18px;
-      outline: 5px;
-      background-color: rgb(13, 139, 181);
-      cursor: pointer;
-      padding: 15px;
-      border-radius: 17px;
-      
-    }
-    
-    #myBtn:hover {
-      background-color: #044a5e;
-    }
 
     
 /*fix container background*/
@@ -255,13 +291,51 @@ width: 1600px;
 
 }
 
+/* Download resume button - create hover style*/
 .btn{
-  background-color: #ffd900;
-  border: none;
+  font-family: Arial;
+  font-size: 12px;
+  font-weight: bolder;
+  float:left;
+  background-color: hsla(42, 100%, 50%, 0.933);
   color: #000;
   padding: 3px 3px;
   cursor: pointer;
-  font-size: 11px;
+  border-radius:100%;
+  height:80px;
+  width:80px;
+  margin: 15px;
+  /*background-color: rgba(0, 200, 255, 0.418);*/
+}
+
+.btn:hover {
+  background-color: rgb(0, 168, 214);
+}
+
+
+ /*scroll to top button*/
+
+ body {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#myBtn {
+  float:right;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 10;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: hsla(42, 100%, 50%, 0.933);
+  cursor: progress;
+  border-radius:100%;
+  height:80px;
+  width:80px;
+}
+
+#myBtn:hover {
+  background-color: rgb(0, 168, 214);
 }
 
 /* Media Queries */
@@ -278,11 +352,22 @@ width: 1600px;
 
   
 } */
+/**illustrations/digital art**/
+.column4 {
+  float: left;
+  width: 23%;
+  height: 20%px;
+  margin: 10%;
+  padding: 5px;
+  cursor:pointer;
+}
 
 .column {
   float: left;
-  width: 25%;
+  width: 20%;
+  height: 20%;
   padding: 5px;
+  cursor:pointer;
 }
 
 /* Clear floats after image containers */
@@ -290,56 +375,60 @@ width: 1600px;
   content: "";
   clear: both;
   display: table;
+  cursor:pointer;
 }
+
 
 .column2 {
   float: left;
   width: 20%;
   padding: 5px;
+  cursor:pointer;
 }
+  
+
 
 .column3 {
   float: left;
   width: 25%;
   padding: 5px;
+  cursor:pointer;
 }
 
 .column_3 {
   float: left;
   width: 25%;
   padding: 5px;
+  cursor:pointer;
 }
 
 .column_4 {
   float: left;
   width: 25%;
   padding: 5px;
+  cursor:pointer;
 }
 
-.column4 {
-  float: left;
-  width: 20%;
-  padding: 5px;
-}
-
+/**logo presentations**/
 .column5 {
   float: left;
   width:25%;
-  padding: 14px;
+  padding: 5px;
+  cursor:pointer;
 }
 
 #shared{
-  margin-left: -22px;
+  margin-left: 2px;
 }
 
-/* Download resume button - create hover style*/
+/* Go-to-top button*/
 button {
   margin-left:0 auto;
   margin-right:0 auto;
   padding: 20px;
-  border-radius: 20PX;
+  border-radius:20px;
   height:80px;
-  width:100px;
+  width:80px;
   /*background-color: rgba(0, 200, 255, 0.418);*/
 }
 
